--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -1,2 +1,4 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>Ironlabs</h1>
+<p>Lab - {{title}}</p>
+
+<a href="/celebrities">Click here to see the celebrities!</a>
