Done up to iteration 12

--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -1,4 +1,6 @@
 <h1>Ironlabs</h1>
 <p>Lab - {{title}}</p>
 
+<a href="/movies">Click here to see the movies!</a>
+<br><br>
 <a href="/celebrities">Click here to see the celebrities!</a>
