--- a/starter-code/views/celebrities/new.hbs
+++ b/starter-code/views/celebrities/new.hbs
@@ -1,6 +1,6 @@
 <h1>Add a new celebrity</h1>
 
-<form action="/celebrities/new" method="POST">
+<form action="/celebrities" method="POST">
 
   <label for="name">Name</label><br>
   <input type="text" name="name" id="name" placeholder="e.g: Nelly Furtado"><br>
